[tool.poetry]
name = "gridappsd-scale"
version = "0.1.2"
description = ""
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
readme = "README.md"
license = "BSD-3-Clause"

packages = [
    {include = "synchrophasor", from="src"},
    {include = "gridappsd_benchmark", from="src"}
]

include = [
    { path="LICENSE", format=["sdist", "wheel"]},
    { path="COPYRIGHT", format=["sdist", "wheel"]}
]

[tool.poetry.dependencies]
python = "^3.10"
gridappsd-python = {version = "^2024.4.1a0", allow-prereleases = true}
gridappsd-field-bus = {version = "^2024.4.1a0", allow-prereleases = true}

[tool.poetry.scripts]
gridappsd-scale = "gridappsd_benchmark.run_test:_main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
